--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-icons": "^5.0.1",
     "react-image-lightbox": "^5.1.4",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.21.3",
