--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-image-lightbox": "^5.1.4",
