--- a/package.json
+++ b/package.json
@@ -5,28 +5,35 @@
   "basename": "/",
   "homepage": "https://sociala.uitheme.net/",
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
     "apexcharts": "^3.45.1",
     "bootstrap": "^5.3.2",
+    "flag-icon-css": "^4.1.7",
     "google-map-react": "^2.2.1",
-    "node-sass": "^7.0.3",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.0",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-flags-select": "^2.2.3",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-image-lightbox": "^5.1.4",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^10.0.4",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^3.5.1"
+    "web-vitals": "^3.5.1",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
