--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flag-icon-css": "^4.1.7",
     "google-map-react": "^2.2.1",
     "node-sass": "^9.0.0",
+    "quill-image-uploader": "^1.3.0",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
     "react-apexcharts": "^1.4.1",
@@ -26,6 +27,7 @@
     "react-icons": "^5.0.1",
     "react-image-lightbox": "^5.1.4",
     "react-player": "^2.14.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
