--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^14.5.2",
     "apexcharts": "^3.45.1",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.4.5",
     "flag-icon-css": "^4.1.7",
     "google-map-react": "^2.2.1",
     "node-sass": "^9.0.0",
