--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-image-lightbox": "^5.1.4",
+    "react-loading-skeleton": "^3.4.0",
     "react-player": "^2.14.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.3",
