--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "flag-icon-css": "^4.1.7",
     "google-map-react": "^2.2.1",
+    "gsap": "^3.12.5",
     "node-sass": "^9.0.0",
     "quill-image-uploader": "^1.3.0",
     "react": "^18.2.0",
@@ -25,6 +26,7 @@
     "react-dropzone": "^14.2.3",
     "react-flags-select": "^2.2.3",
     "react-hook-form": "^7.49.3",
+    "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
     "react-image-lightbox": "^5.1.4",
     "react-loading-skeleton": "^3.4.0",
@@ -37,6 +39,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^3.5.1",
     "yup": "^1.3.3"
   },
