--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "flag-icon-css": "^4.1.7",
     "google-map-react": "^2.2.1",
+    "moment": "^2.30.1",
     "node-sass": "^9.0.0",
     "quill-image-uploader": "^1.3.0",
     "react": "^18.2.0",
