--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^3.5.1",
     "yup": "^1.3.3"
   },
