--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://sociala.uitheme.net/",
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@tanstack/react-query": "^5.35.1",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
@@ -29,6 +30,7 @@
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-image-lightbox": "^5.1.4",
+    "react-intersection-observer": "^9.10.2",
     "react-loading-skeleton": "^3.4.0",
     "react-player": "^2.14.1",
     "react-quill": "^2.0.0",
