--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-toastify": "^10.0.4",
     "sass": "^1.70.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.3",
     "uuid": "^9.0.1",
     "web-vitals": "^3.5.1",
     "yup": "^1.4.0"
