--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "google-map-react": "^2.2.1",
     "gsap": "^3.12.5",
     "moment": "^2.30.1",
-    "node-sass": "^9.0.0",
     "quill-image-uploader": "^1.3.0",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
@@ -40,8 +39,8 @@
     "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^10.0.4",
-    "sass": "^1.70.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.5",
     "swiper": "^11.1.3",
     "uuid": "^9.0.1",
     "web-vitals": "^3.5.1",
@@ -72,6 +71,7 @@
     ]
   },
   "devDependencies": {
+    "sass": "^1.77.4",
     "tailwindcss": "^3.4.1"
   }
 }
