--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/user-event": "^14.5.2",
     "apexcharts": "^3.45.1",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.3",
+    "d3": "^7.9.0",
     "dotenv": "^16.4.5",
     "flag-icon-css": "^4.1.7",
     "google-map-react": "^2.2.1",
@@ -22,6 +24,7 @@
     "react-accessible-accordion": "^5.0.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
