--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "d3": "^7.9.0",
     "dotenv": "^16.4.5",
     "flag-icon-css": "^4.1.7",
+    "fs": "^0.0.1-security",
     "google-map-react": "^2.2.1",
     "gsap": "^3.12.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "moment": "^2.30.1",
+    "pdf-lib": "^1.17.1",
     "quill-image-uploader": "^1.3.0",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
