--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^10.0.4",
+    "react-video-thumbnail": "^0.1.3",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
     "swiper": "^11.1.3",
