--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apexcharts": "^3.45.1",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.3",
+    "crypto-js": "^4.2.0",
     "d3": "^7.9.0",
     "dotenv": "^16.4.5",
     "flag-icon-css": "^4.1.7",
@@ -20,8 +21,12 @@
     "google-map-react": "^2.2.1",
     "gsap": "^3.12.5",
     "html2canvas": "^1.4.1",
+    "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "npm": "^10.8.2",
     "pdf-lib": "^1.17.1",
     "quill-image-uploader": "^1.3.0",
     "react": "^18.2.0",
@@ -43,6 +48,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "react-search-autocomplete": "^8.5.2",
+    "react-secure-storage": "^1.3.2",
     "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^10.0.4",
