--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apexcharts": "^3.45.1",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.3",
+    "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
     "d3": "^7.9.0",
     "dotenv": "^16.4.5",
@@ -27,6 +28,8 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "npm": "^10.8.2",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "pdf-lib": "^1.17.1",
     "quill-image-uploader": "^1.3.0",
     "react": "^18.2.0",
@@ -87,5 +90,13 @@
   "devDependencies": {
     "sass": "^1.77.4",
     "tailwindcss": "^3.4.1"
+  },
+  "resolutions": {
+    "dotenv": "^10.0.0"
+  },
+  "browser": {
+    "path": "path-browserify",
+    "os": "os-browserify/browser",
+    "crypto": "crypto-browserify"
   }
 }
