--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-video-thumbnail": "^0.1.3",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
+    "sweetalert2": "^11.12.4",
     "swiper": "^11.1.3",
     "uuid": "^9.0.1",
     "web-vitals": "^3.5.1",
