--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
     "d3": "^7.9.0",
+    "dompurify": "^3.1.6",
     "dotenv": "^16.4.5",
     "flag-icon-css": "^4.1.7",
     "fs": "^0.0.1-security",
