--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.436.0",
     "moment": "^2.30.1",
     "npm": "^10.8.2",
     "os-browserify": "^0.3.0",
@@ -42,6 +43,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-flags-select": "^2.2.3",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-image-lightbox": "^5.1.4",
