--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.0",
     "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
