--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
-    "apexcharts": "^3.54.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.3",
     "crypto-browserify": "^3.12.0",
@@ -39,7 +38,7 @@
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.0",
     "react-chartjs-2": "^5.2.0",
-    "react-circular-progressbar": "^2.1.0",
+    "react-countup": "^6.5.3",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
